--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "firebase": "^8.2.1",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
