--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "collect_sitemap": "node scripts/sitemap.js"
   },
   "dependencies": {
+    "dayjs": "^1.9.8",
     "firebase": "^8.2.1",
     "next": "10.0.0",
     "react": "17.0.1",
