--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "nextjs-sitemap-generator": "^1.1.3",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
