--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "yarn collect_sitemap && next build",
     "start": "next start",
     "lint": "eslint --fix",
-    "collect_sitemap": "node scripts/sitemap.js"
+    "collect_sitemap": "node scripts/sitemap.js",
+    "login:ci": "vercel login",
+    "deploy:development": "vercel deploy"
   },
   "dependencies": {
     "@types/uuid": "^8.3.0",
     "dayjs": "^1.9.8",
     "firebase": "^8.2.1",
-    "next": "10.0.0",
+    "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-modal": "^3.12.1",
@@ -34,7 +36,8 @@
     "eslint-plugin-prettier": "^3.3.0",
     "nextjs-sitemap-generator": "^1.1.3",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vercel": "^21.0.1"
   },
   "engines": {
     "node": "12.19.0"
