--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.0",
+    "algoliasearch": "^4.8.4",
     "dayjs": "^1.9.8",
     "firebase": "^8.2.1",
     "next": "10.0.4",
