--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "algoliasearch": "^4.8.4",
     "dayjs": "^1.9.8",
     "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-modal": "^3.12.1",
     "styled-components": "^5.2.1",
+    "swr": "^0.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
